[package]
name = "styx_z"
version = "0.1.0"
authors = ["Dennis Waldherr <bytekeeper@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rsbwapi = { git = "https://github.com/Bytekeeper/rsbwapi.git" }
rsbwapi = { path = "../rsbwapi", features = ["metrics"] }
memchr = "2.2.2"
derive_more = "0.99"
serde = "1.0"
serde_yaml = "0.8"
serde_json = { version = "1.0", optional = true }
anyhow = "1.0"
ahash = "0.7"
zstd = { version = "0.11", optional = true }
num-traits = "0.2"
lazy_static = { version = "1.4.0" }

[features]
cvis = ["zstd", "serde_json"]

[profile.release]
strip=true
lto=true
