[package]
name = "styx_z"
version = "0.1.0"
authors = ["Dennis Waldherr <bytekeeper@mailbox.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsbwapi = { git = "https://github.com/Bytekeeper/rsbwapi.git", features = ["metrics"] }
# rsbwapi = { path = "../rsbwapi", features = ["metrics"] }
fixed = "1.19"
memchr = "2.2.2"
derive_more = "0.99"
serde = "1.0"
serde_yaml = "0.9"
serde_json = { version = "1.0" }
anyhow = "1.0"
ahash = "0.8"
zstd = { version = "0.12", optional = true }
num-traits = "0.2"
lazy_static = "1.4.0"
rstar = "0.10"
glam = "0.23"
ordered-float="3"
backtrace = "0.3"
oorandom = "11"
log = "0.4.17"
simplelog = "0.12.0"
metered = "0.9.0"
#pprof = { version = "0.11", features = ["flamegraph"] }

[dev-dependencies]
criterion = "0.4"

[features]
# This will write files readable by cherryvis (see https://github.com/bmnielsen/cherryvis-docker for an ready-to-use container)
cvis = ["zstd"]

[profile.release]
#strip=true
# lto=true
debug=true

[build-dependencies]
static_vcruntime = "2.0"

[profile.dev.package."*"]
opt-level = 2
